--- a/03 - Subroutines - Reusable Blocks of Code/Function-Parameters/function parameters/src/Makefile
+++ b/03 - Subroutines - Reusable Blocks of Code/Function-Parameters/function parameters/src/Makefile
@@ -1,3 +1,3 @@
 CC = c++
-app: break-continue.cpp
-	$(CC) break-continue.cpp -o break-continue
+app: functions.cpp
+	$(CC) functions.cpp -o functions
